# self-study_project

./: pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_initial.py  0003_question_visible.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
